# Order-Service

./: Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  database.py  garbage.py  handlers.py  logger.py  main.py
app/catalog_service/: catalog.py
app/core/: domen.py
app/inbox/infrastructure/: repository.py
app/kafka/: dto.py
app/kafka/infrastructure/: kafka_consumer.py  kafka_producer.py
app/metics/: metric_workers.py  metrics.py
app/migrations/: env.py
app/migrations/versions/: 1a95fb8d616c_create_idempotecy_table.py  4d961a2322f5_create_orders_and_idempotecy_tables.py  5b4b10ee65f6_create_orderstatushistorytable.py  eb4ee6c29336_creat_outboxtable.py
app/orders/: exceptions.py
app/orders/application/use_cases/: create_order.py  get_order.py
app/orders/catalog_service/: catalog.py  catalog_dto.py  exceptions.py
app/orders/core/: models.py
app/orders/idempotency/: exeptions.py  models.py  repository.py
app/orders/infrastructure/: container.py  unit_of_work.py
app/orders/models/: models.py
app/orders/order_dto/: order_dto.py
app/orders/presentation/: routers.py  schemas.py
app/outbox/: exceptions.py
app/outbox/application/: worker.py
app/outbox/infrastructure/: db_schem.py  repository.py
app/services/: container.py  exceptions.py
app/services/catalog_service/: catalog_dto.py  exceptions.py
app/services/core/: models.py
app/services/notifications_service/: dto.py  exceptions.py
app/services/payment_service/: dto.py  exceptions.py
docker/: app.sh
(+21 files in other folders)
